@@ -47,8 +47,10 @@ campaigns, and share them with others.
 sets BitsPerPixel value. Example:
 .B --bpp 32
 .TP
-.B -c, --campaign
-goes directly to the campaign selection menu.
+.B -c[[<difficulty>] <id_campaign> [<id_scenario>]], --campaign[[<difficulty>] <id_campaign> [<id_scenario>]]
+goes directly to the campaign based on the parameters. 
+The difficulty is a number between 1 and current campaign's difficulties number.  The default difficulty is 1.
+The scenario must be one of the campaign's child scenarios. The default scenario is campaign's first scenario.
 .TP
 .BI --config-dir \ name
 sets the user configuration directory to
