@@ -54,6 +54,7 @@ Version 1.9.0-svn:
    * Fixed picking the proper locale, the problem only occurred on some
      systems
    * Added a way to compile wesnoth on windows by using CMake + MSVC9.
+   * Added more command line arguments for starting a campaign+scenario
    * Fixed the ping timeout not waiting for the default ping interval when
      ping timeout is not set to 0
    * Fixed a bug in scoring of AI recall list. Patch by billynux.
